[package]
name = "backend"
version = "0.1.0"
authors = ["Asier Elorz <asielorz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
chrono = "0.4.19"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
rusqlite = { version = "0.27.0", features = ["bundled"] }
