[package]
name = "backend"
version = "0.1.0"
authors = ["Asier Elorz <asielorz@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
chrono = "0.4.19"
percent-encoding = "2.1.0"
rusqlite = { version = "0.27.0", features = ["bundled", "blob"] }
dirs = "1.0.4"
image = "0.24.2"

[build-dependencies]
embed-resource = "1.7"
